stylesheets/snake.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

body {
    padding: 10px;
    display: flex;
    align-items: center;
    flex-direction: column;
    overflow: hidden;
}

canvas {
    border: 1px solid black;
    max-width: 350px;
}

#gui {
    font-family: 'JetBrains Mono', 'Courier New', Courier, monospace;
    display: flex;
    width: 100%;
    text-align: center;
}

#deaths, #food {
    flex: 1;
}

#deaths::before, #food::before {
    color: transparent;
    text-shadow: 0 0 black;
    -webkit-text-stroke: 1px red;
    margin-right: 3px;
    /* 0% of browsers support non-prefixed... https://caniuse.com/?search=text-stroke */
}

#deaths::before {
    content: "☠️";
}

#food::before {
    content: "🍎"
}

